--- a/index.html
+++ b/index.html
@@ -7,26 +7,32 @@
   <link rel="stylesheet" href="./base.css" />
   <link rel="stylesheet" href="./index.css" />
   <script src="./js/vue.js" defer></script>
-  <script src="./js/index.js" defer></script>
+  <script src="./js/todoApp.js" defer></script>
+  <script src="./index.js" defer></script>
 </head>
 
 <body>
-  <section class="todoapp">
+  <section class="todoapp" v-cloak>
     <header class="header">
       <h1>todos</h1>
       <input class="new-todo" placeholder="What needs to be done?" @keyup.enter="addTodo" @blur="addTodo"
         v-model="value" autofocus />
     </header>
     <section class="main">
-      <input id="toggle-all" class="toggle-all" type="checkbox" v-model="toggleAll" @click="completeAll" />
-      <label for="toggle-all" v-show="!!todoList.length">Mark all as complete</label>
+      <input id="toggle-all" class="toggle-all" type="checkbox" v-bind:checked="toggleAll"
+        @click="completeAll(toggleAll)" />
+      <label for="toggle-all" v-show="!!todoList.length">Mark all as
+        complete</label>
       <ul class="todo-list">
-        <li class="todo" v-for="(todo, index) in filterList" v-bind:key="todo.id" :class="{completed : todo.checked}">
+        <li class="todo" v-for="(todo, index) in filterList" v-bind:key="todo.id"
+          :class="{completed : todo.checked, editing: index === editableTodo}">
           <div class="view">
             <input class="toggle" type="checkbox" v-model='todo.checked'>
-            <label>{{todo.value}}</label>
+            <label @dblclick="editTodo(index)">{{todo.value}}</label>
             <button class="destroy" @click='removeTodo(todo.id)'></button>
           </div>
+          <input type="text" class="edit" @keyup.enter="doneEditTodo(todo.id)" @blur="doneEditTodo(todo.id)"
+            v-model="todo.value" v-focus="index === editableTodo">
         </li>
       </ul>
     </section>
@@ -34,17 +40,19 @@
       <span class="todo-count"><strong>{{todoList.filter(e => !e.checked).length}}</strong> items left</span>
       <ul class="filters">
         <li>
-          <a href="#/" :class="{selected: filter ==='all'}" @click="changeFilter('all')">All</a>
+          <a href="#/" :class="{selected: filter ==='#/'}" @click="changeFilter('#/')">All</a>
         </li>
         <li>
-          <a href="#/active" :class="{selected: filter ==='active'}" @click="changeFilter('active')">Active</a>
+          <a href="#/active" :class="{selected: filter ==='#/active'}" @click="changeFilter('#/active')">Active</a>
         </li>
         <li>
-          <a href="#/completed" :class="{selected: filter ==='completed'}"
-            @click="changeFilter('completed')">Completed</a>
+          <a href="#/completed" :class="{selected: filter ==='#/completed'}"
+            @click="changeFilter('#/completed')">Completed</a>
         </li>
       </ul>
-      <button class="clear-completed" @click="clearCompleted">Clear completed</button>
+      <button class="clear-completed" @click="clearCompleted" v-show="todoList.filter(e => e.checked).length">
+        Clear completed
+      </button>
     </footer>
   </section>
   <footer class="info">
